--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ gtag('config', 'UA-16253329-10');
 <div class="Desktop">
     <div class="LeftSide">
         <h2><a href="https://play.google.com/store/apps/developer?id=Aron+Sommer" target="_blank">Games on Google Play</a></h2>
-        <p><a href="https://aronsommer.github.io/map-chat" target="_blank">Online Map Chat</a></p>
+        <p><a href="https://aronsommer.github.io/map-chat" target="_blank">Map Chat Online</a></p>
         <p><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></p>
     </div>
     <div class="RightSide">
@@ -54,7 +54,7 @@ gtag('config', 'UA-16253329-10');
 <div class="Mobile">
 <h2><a href="https://play.google.com/store/apps/developer?id=Aron+Sommer" target="_blank">Games on Google Play</a></h2>
 <h2><a href="https://apps.apple.com/developer/aron-sommer/id591367063" target="_blank">Games on the App Store</a></h2>
-<h2><a href="https://aronsommer.github.io/map-chat" target="_blank">Online Map Chat</a></h2>
+<h2><a href="https://aronsommer.github.io/map-chat" target="_blank">Map Chat Online</a></h2>
 <h2><a href="https://strava-activity-map.oa.r.appspot.com/" target="_blank">Strava Activity Map</a></h2>
 <h2><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></h2>
 <h2><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></h2>
