--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-16253329-10');
 </script>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="author" content="Aron Sommer" />
-<meta name="description" content="This is the website of Aron Sommer" />
-<meta name="keywords" content="Games, Art, Animations" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="author" content="Aron Sommer">
+<meta name="description" content="This is the website of Aron Sommer">
+<meta name="keywords" content="Games, Art, Animations">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Aron Sommer</title>
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=block" rel="stylesheet">
@@ -24,7 +24,7 @@ gtag('config', 'UA-16253329-10');
 <h2 class="Desktop" style="color:white;">Aron Sommer</h2>
 <h1 class="Mobile" style="color:white;">Aron Sommer</h1>
 <!-- Only on Desktop -->
-<div class="WebGames">
+<div class="Desktop" id="WebGames">
 <p style="color:white;"><br>Web Games</p>
 <a href="https://www.crazygames.com/game/astro-rush" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Astro Rush" src="crazygames-covers/astro-rush.png" width="178" height="100"></a>
 <a href="https://www.crazygames.com/game/eagle-ride" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Eagle Ride" src="crazygames-covers/eagle-ride.png" width="178" height="100"></a>
@@ -34,36 +34,41 @@ gtag('config', 'UA-16253329-10');
 <a href="https://www.crazygames.com/game/cat-car" target="_blank"><img class="img-rounded" alt="Cat Car" src="crazygames-covers/cat-car.png" width="178" height="100"></a><br><br>
 </div>
 <div class="Desktop">
-    <div class="LeftSide">
-        <h2><a href="https://play.google.com/store/apps/developer?id=Aron+Sommer" target="_blank">Games on Google Play</a></h2>
-        <p><a href="https://aronsommer.github.io/map-chat" target="_blank">Map Chat Online</a></p>
-        <p><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></p>
-    </div>
-    <div class="RightSide">
-        <h2><a href="https://apps.apple.com/developer/aron-sommer/id591367063" target="_blank">Games on the App Store</a></h2>
-        <p><a href="https://strava-activity-map.oa.r.appspot.com/" target="_blank">Strava Activity Map</a></p>
-        <p><a href="https://aronsommer.github.io/owntheworld/" target="_blank">OwnTheWorld</a></p>
-    </div>
-    <div class="Center">
-        <h2>&#10024; &#10024; &#10024;</h2>
-        <p><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></p>
-        <p><a href="https://aronsommer.github.io/old-website/" target="_blank">Old website</a></p>
-    </div>
+    <table>
+        <tbody>
+            <tr>
+                <td><div class="td-div"><p><a href="https://play.google.com/store/apps/developer?id=Aron+Sommer" target="_blank">Games on Google Play</a><p></div></td>
+                <td><div class="td-div"><p>¯\_(ツ)_/¯</p></div></td>
+                <td><div class="td-div"><p><a href="https://apps.apple.com/developer/aron-sommer/id591367063" target="_blank">Games on the App Store</a><p></div></td>
+            </tr>
+            <tr>
+                <td><div class="td-div"><p><a href="https://aronsommer.github.io/map-chat" target="_blank">Map Chat</a></p></div></td>
+                <td><div class="td-div"><p><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></p></div></td>
+                <td><div class="td-div"><p><a href="https://strava-activity-map.oa.r.appspot.com/" target="_blank">Strava Activity Map</a></p></div></td>
+            </tr>
+            <tr>
+                <td><div class="td-div"><p><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></p></div></td>
+                <td><div class="td-div"><p><a href="https://aronsommer.github.io/old-website/" target="_blank">Old website</a></p></div></td>
+                <td><div class="td-div"><p><a href="https://aronsommer.github.io/owntheworld/" target="_blank">OwnTheWorld</a></p></div></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 <!-- Only on Mobile -->
 <div class="Mobile">
 <h2><a href="https://play.google.com/store/apps/developer?id=Aron+Sommer" target="_blank">Games on Google Play</a></h2>
 <h2><a href="https://apps.apple.com/developer/aron-sommer/id591367063" target="_blank">Games on the App Store</a></h2>
-<h2><a href="https://aronsommer.github.io/map-chat" target="_blank">Map Chat Online</a></h2>
+<h2><a href="https://aronsommer.github.io/map-chat" target="_blank">&#127757; Map Chat &#127757;</a></h2>
 <h2><a href="https://strava-activity-map.oa.r.appspot.com/" target="_blank">Strava Activity Map</a></h2>
 <h2><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></h2>
 <h2><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></h2>
 <h2><a href="https://aronsommer.github.io/old-website/" target="_blank">Old website</a></h2>
 </div>
 <!-- On Desktop or Mobile -->
-<!-- <p><a class="Desktop" href="https://view.publitas.com/p222-15238/aron-sommer/" target="_blank">Paintings 2011-2016</a></p> -->
-<!-- <h2><a class="Mobile" href="https://view.publitas.com/p222-15238/aron-sommer/" target="_blank">Paintings 2011-2016</a></h2> -->
-<hr class="Desktop" style="width:200px; height:0.5px; border:none; color:white; background-color:white" />
+<!-- <p class="Desktop"><a href="https://view.publitas.com/p222-15238/aron-sommer/" target="_blank">Paintings 2011-2016</a></p> -->
+<!-- <h2 class="Mobile"><a href="https://view.publitas.com/p222-15238/aron-sommer/" target="_blank">Paintings 2011-2016</a></h2> -->
+<!-- Only on Desktop -->
+<br class="Desktop"><hr class="Desktop" style="width:575px; height:0.5px; border:none; color:white; background-color:white">
 <!-- On Desktop and Mobile -->
 <p style="color:white;">aronsommer@gmail.com</p>
 </div>
