rename link to "Old Website"

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ gtag('config', 'UA-16253329-10');
             </tr>
             <tr>
                 <td><div class="td-div"><p><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></p></div></td>
-                <td><div class="td-div"><p><a href="https://aronsommer.github.io/old-website/" target="_blank">Old website</a></p></div></td>
+                <td><div class="td-div"><p><a href="https://aronsommer.github.io/old-website/" target="_blank">Old Website</a></p></div></td>
                 <td><div class="td-div"><p><a href="https://aronsommer.github.io/owntheworld/" target="_blank">OwnTheWorld</a></p></div></td>
             </tr>
         </tbody>
@@ -62,7 +62,7 @@ gtag('config', 'UA-16253329-10');
 <h2><a href="https://strava-activity-map.oa.r.appspot.com/" target="_blank">Strava Activity Map</a></h2>
 <h2><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></h2>
 <h2><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></h2>
-<h2><a href="https://aronsommer.github.io/old-website/" target="_blank">Old website</a></h2>
+<h2><a href="https://aronsommer.github.io/old-website/" target="_blank">Old Website</a></h2>
 </div>
 <!-- On Desktop or Mobile -->
 <!-- <p class="Desktop"><a href="https://view.publitas.com/p222-15238/aron-sommer/" target="_blank">Paintings 2011-2016</a></p> -->
