animate container div instead of html and body

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ gtag('config', 'UA-16253329-10');
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container" data-nosnippet>
+<div id="container1" data-nosnippet>
+<div id="container2" data-nosnippet>
 <!-- On Desktop or Mobile -->
 <h2 class="Desktop" style="color:white;">Aron Sommer</h2>
 <h1 class="Mobile" style="color:white;">Aron Sommer</h1>
@@ -71,6 +72,7 @@ gtag('config', 'UA-16253329-10');
 <br class="Desktop"><hr class="Desktop" style="width:575px; height:0.5px; border:none; color:white; background-color:white">
 <!-- On Desktop and Mobile -->
 <p style="color:white;">aronsommer@gmail.com</p>
+</div>
 </div>
 </body>
 </html>
