--- a/privacy-policy/match-4-android.html
+++ b/privacy-policy/match-4-android.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Aron Sommer built the Connect Four app as
+                  Aron Sommer built the Match 4 Connect Four In A Row app as
                   an Ad Supported app. This SERVICE is provided by
                   Aron Sommer at no cost and is intended for use as
                   is.
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  Connect Four unless otherwise defined in this Privacy Policy.
+                  Match 4 Connect Four In A Row unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
@@ -37,7 +37,7 @@
                   </p> <p>
                     Link to privacy policy of third party service providers used
                     by the app
-                  </p> <ul><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://unity3d.com/legal/privacy-policy" target="_blank">Unity</a></li><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://unity3d.com/legal/privacy-policy" target="_blank">Unity</a></li><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
                   I want to inform you that whenever you
                   use my Service, in a case of an error in the app
                   I collect data and information (through third party
