--- a/privacy-policy/link-4-ios.html
+++ b/privacy-policy/link-4-ios.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Aron Sommer built the Match 4 Connect Four In A Row app as
+                  Aron Sommer built the Link 4 app as
                   an Ad Supported app. This SERVICE is provided by
                   Aron Sommer at no cost and is intended for use as
                   is.
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  Match 4 Connect Four In A Row unless otherwise defined in this Privacy Policy.
+                  Link 4 unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
