updated Strava Activity Map link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ gtag('config', 'UA-16253329-10');
             <tr>
                 <td><div class="td-div"><p><a href="https://aronsommer.github.io/map-chat" target="_blank">Map Chat</a></p></div></td>
                 <td><div class="td-div"><p><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></p></div></td>
-                <td><div class="td-div"><p><a href="https://strava-activity-map-1.uc.r.appspot.com" target="_blank">Strava Activity Map</a></p></div></td>
+                <td><div class="td-div"><p><a href="https://www.sam.aronsommer.com/" target="_blank">Strava Activity Map</a></p></div></td>
             </tr>
             <tr>
                 <td><div class="td-div"><p><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></p></div></td>
