--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ gtag('config', 'UA-16253329-10');
 <h2><a href="https://play.google.com/store/apps/developer?id=Aron+Sommer" target="_blank">Games on Google Play</a></h2>
 <h2><a href="https://apps.apple.com/developer/aron-sommer/id591367063" target="_blank">Games on the App Store</a></h2>
 <h2><a href="https://aronsommer.github.io/map-chat" target="_blank">&#127757; Map Chat &#127757;</a></h2>
-<h2><a href="https://strava-activity-map.oa.r.appspot.com/" target="_blank">Strava Activity Map</a></h2>
+<h2><a href="https://www.sam.aronsommer.com/" target="_blank">Strava Activity Map</a></h2>
 <h2><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></h2>
 <h2><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></h2>
 <h2><a href="https://aronsommer.github.io/old-website/" target="_blank">Old Website</a></h2>
