--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ gtag('config', 'UA-16253329-10');
                 <td><div class="td-div"><p><a href="https://apps.apple.com/developer/aron-sommer/id591367063" target="_blank">Games on the App Store</a><p></div></td>
             </tr>
             <tr>
-                <td><div class="td-div"><p><a href="https://aronsommer.github.io/map-chat" target="_blank">Map Chat</a></p></div></td>
-                <td><div class="td-div"><p><a href="https://aronsommer.github.io/old-website/" target="_blank">Old Website</a></p></div></td>
+                <td><div class="td-div"><p><a href="https://mapchat.aronsommer.com/" target="_blank">Map Chat</a></p></div></td>
+                <td><div class="td-div"><p><a href="https://oldwebsite.aronsommer.com/" target="_blank">Old Website</a></p></div></td>
                 <td><div class="td-div"><p><a href="https://stravamap.aronsommer.com/" target="_blank">Strava Map</a></p></div></td>
             </tr>
             <!-- <tr>
@@ -59,11 +59,11 @@ gtag('config', 'UA-16253329-10');
 <div class="Mobile">
 <h2><a href="https://play.google.com/store/apps/developer?id=Aron+Sommer" target="_blank">Games on Google Play</a></h2>
 <h2><a href="https://apps.apple.com/developer/aron-sommer/id591367063" target="_blank">Games on the App Store</a></h2>
-<h2><a href="https://aronsommer.github.io/map-chat" target="_blank">&#127757; Map Chat &#127757;</a></h2>
+<h2><a href="https://mapchat.aronsommer.com/" target="_blank">&#127757; Map Chat &#127757;</a></h2>
 <h2><a href="https://stravamap.aronsommer.com/" target="_blank">Strava Map</a></h2>
 <h2><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></h2>
 <h2><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></h2>
-<h2><a href="https://aronsommer.github.io/old-website/" target="_blank">Old Website</a></h2>
+<h2><a href="https://oldwebsite.aronsommer.com/" target="_blank">Old Website</a></h2>
 </div>
 <!-- On Desktop or Mobile -->
 <!-- <p class="Desktop"><a href="https://view.publitas.com/p222-15238/aron-sommer/" target="_blank">Paintings 2011-2016</a></p> -->
