--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ gtag('config', 'UA-16253329-10');
 <meta name="description" content="This is the website of Aron Sommer">
 <meta name="keywords" content="Games, Art, Animations">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Aron Sommer</title>
+<title>Aron Sommer ¯\_(ツ)_/¯</title>
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=block" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -47,11 +47,6 @@ gtag('config', 'UA-16253329-10');
                 <td><div class="td-div"><p><a href="https://oldwebsite.aronsommer.com/" target="_blank">Old Website</a></p></div></td>
                 <td><div class="td-div"><p><a href="https://activitymap.aronsommer.com/" target="_blank">Activity Map</a></p></div></td>
             </tr>
-            <!-- <tr>
-                <td><div class="td-div"><p>¯\_(ツ)_/¯</p></div></td>
-                <td><div class="td-div"><p><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></p></div></td>
-                <td><div class="td-div"><p><a href="https://aronsommer.github.io/owntheworld/" target="_blank">OwnTheWorld</a></p></div></td>
-            </tr> -->
         </tbody>
     </table>
 </div>
@@ -62,12 +57,8 @@ gtag('config', 'UA-16253329-10');
 <h2><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></h2>
 <h2><a href="https://mapchat.aronsommer.com/" target="_blank">&#127757; Map Chat &#127757;</a></h2>
 <h2><a href="https://activitymap.aronsommer.com/" target="_blank">Activity Map</a></h2>
-<h2><a href="https://opensea.io/collection/aronsommer" target="_blank">NFTs on OpenSea</a></h2>
 <h2><a href="https://oldwebsite.aronsommer.com/" target="_blank">Old Website</a></h2>
 </div>
-<!-- On Desktop or Mobile -->
-<!-- <p class="Desktop"><a href="https://view.publitas.com/p222-15238/aron-sommer/" target="_blank">Paintings 2011-2016</a></p> -->
-<!-- <h2 class="Mobile"><a href="https://view.publitas.com/p222-15238/aron-sommer/" target="_blank">Paintings 2011-2016</a></h2> -->
 <!-- Only on Desktop -->
 <br class="Desktop"><hr class="Desktop" style="width:575px; height:0.5px; border:none; color:white; background-color:white">
 <!-- On Desktop and Mobile -->
