--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D51SCE7VDX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3917RPY1C"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
-gtag('config', 'G-D51SCE7VDX');
+gtag('config', 'G-Y3917RPY1C');
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Aron Sommer">
