--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ gtag('config', 'G-Y3917RPY1C');
 <meta name="keywords" content="Games, Art, Animations">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Aron Sommer ¯\_(ツ)_/¯</title>
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=block" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
