--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ gtag('config', 'G-Y3917RPY1C');
 <div class="Desktop" id="WebGames">
 <p style="color:white;"><br>Web Games</p>
 <a href="https://www.crazygames.com/game/slope-car" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Slope Car" src="crazygames-covers/slope-car.png" width="178" height="100"></a>
-<a href="https://poki.com/en/g/eagle-ride" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Eagle Ride" src="crazygames-covers/eagle-ride.png" width="178" height="100"></a>
+<a href="https://www.crazygames.com/game/eagle-ride" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Eagle Ride" src="crazygames-covers/eagle-ride.png" width="178" height="100"></a>
 <a href="https://poki.com/en/g/supergun" target="_blank"><img class="img-rounded" alt="Supergun" src="crazygames-covers/supergun.png" width="178" height="100"></a><br><br>
 <!-- <a href="https://www.crazygames.com/game/astro-rush" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Astro Rush" src="crazygames-covers/astro-rush.png" width="178" height="100"></a>
 <a href="https://www.crazygames.com/game/cat-car" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Cat Car" src="crazygames-covers/cat-car.png" width="178" height="100"></a>
