--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@ gtag('config', 'G-Y3917RPY1C');
 <!-- Only on Desktop -->
 <div class="Desktop" id="WebGames">
 <p style="color:white;"><br>Web Games</p>
-<a href="https://www.crazygames.com/game/slope-car" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Slope Car" src="crazygames-covers/slope-car.png" width="178" height="100"></a>
-<a href="https://www.crazygames.com/game/eagle-ride" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Eagle Ride" src="crazygames-covers/eagle-ride.png" width="178" height="100"></a>
-<a href="https://poki.com/en/g/supergun" target="_blank"><img class="img-rounded" alt="Supergun" src="crazygames-covers/supergun.png" width="178" height="100"></a><br><br>
-<!-- <a href="https://www.crazygames.com/game/astro-rush" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Astro Rush" src="crazygames-covers/astro-rush.png" width="178" height="100"></a>
-<a href="https://www.crazygames.com/game/cat-car" target="_blank"><img style="margin-right: 10px;" class="img-rounded" alt="Cat Car" src="crazygames-covers/cat-car.png" width="178" height="100"></a>
-<a href="https://www.crazygames.com/game/hyper-jelly" target="_blank"><img class="img-rounded" alt="Hyper Jelly" src="crazygames-covers/hyper-jelly.png" width="178" height="100"></a><br><br> -->
+<a href="https://www.crazygames.com/game/slope-car" target="_blank"><img style="margin-right: 38px;" class="img-rounded" alt="Slope Car" src="webgames-icons/slope-car.png" width="150" height="150"></a>
+<a href="https://poki.com/en/g/eagle-ride" target="_blank"><img style="margin-right: 38px;" class="img-rounded" alt="Eagle Ride" src="webgames-icons/eagle-ride.png" width="150" height="150"></a>
+<a href="https://poki.com/en/g/supergun" target="_blank"><img class="img-rounded" alt="Supergun" src="webgames-icons/supergun.png" width="150" height="150"></a><br><br>
 </div>
 <div class="Desktop">
     <table>
