--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ gtag('config', 'G-Y3917RPY1C');
 </div>
 <!-- Only on Mobile -->
 <div class="Mobile">
+<a href="https://poki.com/en/g/eagle-ride" target="_blank"><img style="margin-right: 0px;" class="img-rounded" alt="Eagle Ride" src="webgames-icons/eagle-ride.png" width="100" height="100"></a>
 <h2><a href="https://play.google.com/store/apps/developer?id=Aron+Sommer" target="_blank">Games on Google Play</a></h2>
 <h2><a href="https://apps.apple.com/developer/aron-sommer/id591367063" target="_blank">Games on the App Store</a></h2>
 <h2><a href="https://apps.garmin.com/en-US/developer/796adce9-1dd3-43d1-a69a-9c4584b73e04/apps" target="_blank">Garmin Apps</a></h2>
